--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,5 @@
-<h1>{{title}}</h1>
-<ul>
-  <li *ngFor="let user of users">
-    Id: {{user.id}} => Username: {{user.userName}}
-  </li>
-</ul>
+<datr-nav></datr-nav>
+
+<div class="container" style="margin: 100px auto;">
+  <datr-home></datr-home>
+</div>
