add basic routing

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <datr-nav></datr-nav>
 
 <div class="container" style="margin: 100px auto;">
-  <datr-home></datr-home>
+  <router-outlet></router-outlet>
 </div>
