--- a/client/src/app/components/nav/nav.component.html
+++ b/client/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <a class="navbar-brand" routerLinkActive="active" routerLink="/">Datr</a>
     <ul class="navbar-nav mr-auto">
@@ -14,8 +14,8 @@
         </li>
       </ng-container>
     </ul>
-    <div dropdown class="dropdown" *ngIf="accountService.currentUser$ | async">
-      <a dropdownToggle class="dropdown-toggle text-light">Account</a>
+    <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
+      <a dropdownToggle class="dropdown-toggle text-light">{{user.username}}</a>
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item">Edit Profile</a>
         <div class="dropdown-divider"></div>
@@ -25,7 +25,7 @@
     <form *ngIf="(accountService.currentUser$ | async) == null" #loginForm="ngForm" class="form-inline mt-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
       <input name="username" class="form-control mr-sm-2" type="text" placeholder="Username" aria-label="Username" [(ngModel)]="model.username">
       <input name="password" class="form-control mr-sm-2" type="password" placeholder="Password" aria-label="Password" [(ngModel)]="model.password">
-      <button class="btn btn-outline-success" type="submit">Login</button>
+      <button class="btn btn-success" type="submit">Login</button>
     </form>
   </div>
 </nav>
