--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,3 +4,11 @@
 
 // @import 'tailwindcss/utilities';
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300&display=swap');
+$font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$font-size-base: .875rem !default;
+
+* {
+    font-family: $font-family;
+}
