--- a/Datr.Client/src/app/components/nav/nav.component.html
+++ b/Datr.Client/src/app/components/nav/nav.component.html
@@ -13,6 +13,9 @@
           <a class="nav-link" routerLinkActive="active" routerLink="/messages">Messages</a>
         </li>
       </ng-container>
+      <li class="nav-item">
+        <a class="nav-link" routerLinkActive="active" routerLink="/errors">Errors</a>
+      </li>
     </ul>
     <div dropdown class="dropdown" *ngIf="(accountService.currentUser$ | async) as user">
       <a dropdownToggle class="dropdown-toggle text-light">{{user.username | titlecase}}</a>
