--- a/Datr.Client/src/app/errors/test-errors/test-errors.component.html
+++ b/Datr.Client/src/app/errors/test-errors/test-errors.component.html
@@ -4,4 +4,12 @@
   <button (click)="get401Error()" class="btn btn-outline-danger mr-3"><i class="fa fa-exclamation-circle mr-2"></i>Test 401 Error</button>
   <button (click)="get404Error()" class="btn btn-outline-danger mr-3"><i class="fa fa-exclamation-circle mr-2"></i>Test 404 Error</button>
   <button (click)="get400ValidationError()" class="btn btn-outline-danger mr-3"><i class="fa fa-exclamation-circle mr-2"></i>Test 400 Validation Error</button>
+
+  <div class="row mt-5" *ngIf="validationErrors.length > 0">
+    <ul class="text-danger">
+      <li *ngFor="let error of validationErrors">
+        {{error}}
+      </li>
+    </ul>
+  </div>
 </ng-container>
