--- a/Datr.Client/src/app/components/members/member-list/member-list.component.html
+++ b/Datr.Client/src/app/components/members/member-list/member-list.component.html
@@ -1,1 +1,5 @@
-<p>member-list works!</p>
+<div class="row">
+  <div class="col-2" *ngFor="let member of members">
+    <datr-member-card [member]="member"></datr-member-card>
+  </div>
+</div>
