--- a/Datr.Client/src/app/components/members/member-card/member-card.component.html
+++ b/Datr.Client/src/app/components/members/member-card/member-card.component.html
@@ -1,13 +1,20 @@
 <div class="card mb-4 border-primary">
-  <div class="card-header">
-    <i class="fa fa-user mr-2"></i>
-    {{member.username}}
-  </div>
   <div class="card-img-wrapper">
     <img src="{{member.photoUrl}}" alt="{{member.username}}" class="card-img-top"/>
+    <ul class="list-inline member-icons animate text-center">
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa fa-user"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+      </li>
+      <li class="list-inline-item">
+        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+      </li>
+    </ul>
   </div>
   <div class="card-body p-2">
-    <h4 class="card-title">Summary</h4>
+    <h4 class="card-title">{{member.username | titlecase}}</h4>
     <p class="card-text"><i class="fa fa-map-marker mr-2"></i>{{member.city}}</p>
   </div>
 </div>
