add jwt interceptor; add basic member detail page

--- a/Datr.Client/src/app/components/members/member-detail/member-detail.component.html
+++ b/Datr.Client/src/app/components/members/member-detail/member-detail.component.html
@@ -1,1 +1,5 @@
-<p>member-detail works!</p>
+<div class="row justify-content-start">
+  <div class="col-sm-auto">
+    <h1>{{member?.username | titlecase}}</h1>
+  </div>
+</div>
