--- a/Datr.Client/src/app/components/members/member-detail/member-detail.component.html
+++ b/Datr.Client/src/app/components/members/member-detail/member-detail.component.html
@@ -41,7 +41,7 @@
         <p>{{member.interests}}</p>
       </tab>
       <tab heading="Photos">
-        <p>Photos of me</p>
+        <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
       </tab>
       <tab heading="Messages">
         <p>Messages will show up here</p>
